# python-java-ai-frameworks

./: .buildconfig  .classpath  .gitignore  .project  .pydevproject  README.md
.devcontainer/: Dockerfile  devcontainer.json
ANGULAR/: TODO.md
Java/: README.md  pom.xml
Java-tutorials/: README.md
Java-tutorials/Algorithms/: InsertionSort.java  mermaid_markdown.md
Java-tutorials/java-10-features/: README.md
Java-tutorials/java-algorithms/: pom.xml
Java-tutorials/many-tutorial-topics/: pom.xml
Java-tutorials/misc_files/: SpiderCrawler.java  SpiderLeg.java  tutorial_int.py
Java-tutorials/mvn-java-8/: README.md
Java/ChapOne/: ArithmeticDemo.java  ArrayDemo.java  Bicycle.java  BicycleDemo.java  BicycleImpl.java  BreakWithLabelDemo.java  ChildDemo.java  ChildImpl.java  ContinueBreakWithLabelDemo.java  ContinueWithDemo.java  ContinueWithLabelDemo.java  EnhabcedForDemo.java  ForDemo.java  HelloWorld.java  InterfaceBicycle.java  ParentImpl.java  ParentInterface.java  package.bluej
Java/core-java/: pom.xml
Java/example-datastay/: pom.xml
Java/greeting-common/: pom.xml
Java/greeting-service/: pom.xml
Java/grpc-example/: pom.xml
Java/msg-driven/: pom.xml
Java/mysql-r2dbc-app/: pom.xml
cloud-infra/: docker-compose.yaml
code_cpp/: AddedNumbers.cpp
code_cpp/cppfeatures/: main  (+9 more)
code_cpp/opencv_examples/img_path/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  configureOpencv  exampleOpencv  exampleOpencv.cpp
cppModernFeatures/: .gitignore  CMakeLists.txt  CMakeListstxt.py
kafka-stream-example/: pom.xml
tf-java-example/: pom.xml
(+307 files in other folders)
